RESOLVED FIXED71243
Amend missing uses of LayoutUnits in RenderApplet, Button, and DeprecatedFlexibleBox
https://bugs.webkit.org/show_bug.cgi?id=71243
Summary Amend missing uses of LayoutUnits in RenderApplet, Button, and DeprecatedFlex...
Levi Weintraub
Reported 2011-10-31 15:21:55 PDT
Correcting continued uses of ints in these rendering classes. More to come...
Attachments
Patch (13.11 KB, patch)
2011-10-31 15:27 PDT, Levi Weintraub
no flags
Patch (13.12 KB, patch)
2011-10-31 16:02 PDT, Levi Weintraub
no flags
Levi Weintraub
Comment 1 2011-10-31 15:27:19 PDT
Darin Adler
Comment 2 2011-10-31 15:49:41 PDT
Comment on attachment 113093 [details] Patch Changes all look OK but patch doesn’t apply.
Levi Weintraub
Comment 3 2011-10-31 16:02:43 PDT
Eric Seidel (no email)
Comment 4 2011-10-31 16:11:55 PDT
Comment on attachment 113100 [details] Patch OK.
Levi Weintraub
Comment 5 2011-10-31 16:19:10 PDT
Comment on attachment 113100 [details] Patch Thanks Eric!
WebKit Review Bot
Comment 6 2011-10-31 18:02:15 PDT
Comment on attachment 113100 [details] Patch Clearing flags on attachment: 113100 Committed r98929: <http://trac.webkit.org/changeset/98929>
WebKit Review Bot
Comment 7 2011-10-31 18:02:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.