Amend missing uses of LayoutUnits in RenderApplet, Button, and DeprecatedFlexibleBox https://bugs.webkit.org/show_bug.cgi?id=71243

Reviewed by Eric Seidel.

Replacing remaining integer uses with LayoutUnits in the aforementioned classes.

No new tests -- no change in behavior.

* rendering/RenderApplet.cpp:
(WebCore::RenderApplet::intrinsicSize):
(WebCore::RenderApplet::createWidgetIfNecessary):
* rendering/RenderApplet.h:
* rendering/RenderButton.cpp:
(WebCore::RenderButton::controlClipRect):
* rendering/RenderButton.h:
* rendering/RenderDeprecatedFlexibleBox.cpp:
(WebCore::marginWidthForChild):
(WebCore::RenderDeprecatedFlexibleBox::computePreferredLogicalWidths):
(WebCore::RenderDeprecatedFlexibleBox::layoutBlock):
(WebCore::RenderDeprecatedFlexibleBox::layoutHorizontalBox):
(WebCore::RenderDeprecatedFlexibleBox::applyLineClamp):
* rendering/RenderDeprecatedFlexibleBox.h:


Canonical link: https://commits.webkit.org/87534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98929 268f45cc-cd09-0410-ab3c-d52691b4dbfc